--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.19.11",
-    "@types/react": "^18.3.28",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/react-redux": "^7.1.34",
-    "firebase": "^10.14.1",
+    "firebase": "^12.9.0",
     "formik": "^2.4.9",
     "framer-motion": "^12.34.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-id-swiper": "^4.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.3",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
-    "swiper": "^8.4.7",
+    "swiper": "^12.1.2",
     "typescript": "^5.9.3",
     "web-vitals": "^4.2.4",
     "yup": "^0.32.11"
@@ -53,8 +52,9 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.4.1",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.24",
     "tailwindcss": "^3.4.19",
     "vite": "^6.2.0"
   }
